welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: type int
	 var res = new Array[int] (taille)
                             ^Array1:10: error: not found: value TCouleur
			TCouleur(n) = getCouleurSol();
                        ^